2005-12-14  Edward Hervey  <edward@fluendo.com>

	* flumotion/component/producers/looper/admin_gtk.py:
	Remove print
	* flumotion/component/producers/looper/flufileinfo.glade:
	ellipsize the filename string

2005-12-14  Andy Wingo  <wingo@pobox.com>

	* flumotion/launch/main.py (ComponentWrapper.start): Call start()
	with the right number of args.

2005-12-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/config.py:
	  show component and property name in case of an error during
	  parsing of properties

2005-12-14  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/command/main.py: New file, implementing args
	parsing.

	* flumotion/admin/gtk/Makefile.am: 
	* flumotion/admin/command/__init__.py: Add new module space for
	flumotion-command.

	* bin/flumotion-command.in: New executable. Designed to log in to
	the manager, execute a command, wait for a response, and then
	exit.

	* configure.ac: 
	* bin/Makefile.am (bin_SCRIPTS): flumotion-command infrastructure.
	* flumotion/admin/Makefile.am (SUBDIRS): 

	* flumotion/manager/manager.py (Vishnu.loadConfiguration): Fix DAG
	error.

	* flumotion/manager/manager.py (Vishnu.releasePortsOnWorker):
	s/warning/debug/, the condition can occur legitimately. Cut out if
	the worker is not available.

	* flumotion/manager/component.py
	(ComponentHeaven.removeMasterClock): Renamed from
	removeMasterClockInfo. Release the port from the worker.
	(ComponentHeaven.unregisterComponent): If the component provided a
	master clock, remove its clocking info.

2005-12-14  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Bump the gst-0.10 requirement to 0.10.0.1 because of the use of
	gst.extend.discoverer in the looper element.
	
	* flumotion/component/producers/looper/looper.py:
	* flumotion/component/producers/looper/looper.xml:
	* flumotion/component/producers/looper/looper.glade:
	* flumotion/component/producers/looper/flufileinfo.glade:
	* flumotion/component/producers/looper/admin_gtk.py: